# ray-tracer-challenge

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  profiling.sh  testing.sh  tests.cpp
.github/workflows/: c-cpp.yml
challenges/: CMakeLists.txt  README.md  ch1.cpp  ch10.1.cpp  ch10.2.cpp  ch10.3.cpp  ch10.4.cpp  ch10.5.cpp  ch11.1.cpp  ch11.2.cpp  ch11.3.cpp  ch11.4.cpp  ch11.5.cpp  ch11.cpp  ch12.1.cpp  ch15.1.cpp  ch15.2.cpp  ch15.3.cpp  ch15.4.cpp  ch15.5.cpp  ch16.1.cpp  ch16.2.cpp  ch16.3.cpp  ch16.cpp  ch17.1.cpp  ch2.cpp  ch4.cpp  ch5.cpp  ch6.cpp  ch7.cpp  ch8.cpp  ch9.1.cpp  ch9.2.cpp  ch9.cpp
cpp/ch1/: tuple.h
cpp/ch2/: README.md  canvas.h  canvas.ppm  flight_path.ppm  tests.cpp
outputs/ch1/: flight_path.txt
outputs/ch4/: clock_value.ppm
src/: CMakeLists.txt  OBJ_Loader.hpp  camera.cpp  camera.h  camera.hpp  canvas.cpp  canvas.h  canvas.hpp  color.cpp  color.h  color.hpp  computation.cpp  computation.h  computation.hpp  intersection.cpp  intersection.h  intersection.hpp  intersections.cpp  intersections.h  intersections.hpp  lights.cpp  lights.h  lights.hpp  material.cpp  material.h  material.hpp  matrix.cpp  matrix.h  matrix.hpp  obj_loader.cpp  obj_loader.hpp  plane.h  ray.cpp  ray.h  ray.hpp  ray_tracer.h  ray_tracer.hpp  shape.cpp  shape.h  sphere.cpp  (+12 more)
src/cpp/ch0/: ex_0.cpp  hello.cpp
src/cpp/ch1/: README.md  main.cpp  tuple.cpp  tuple.h
src/cpp/ch2/: README.md  canvas.cpp  canvas.h  test.out  tests.cpp  tuple.cpp  tuple.h  virtual_cannon_traced.cpp
src/patterns/: CMakeLists.txt  blend_pattern.hpp  checkers_pattern.cpp  checkers_pattern.h  checkers_pattern.hpp  conical_ring_pattern.cpp  conical_ring_pattern.h  conical_ring_pattern.hpp  gradient_pattern.cpp  gradient_pattern.h  gradient_pattern.hpp  pattern.cpp  pattern.h  pattern.hpp  perlin_pattern.hpp  permutation_pattern.hpp  radial_ring_pattern.cpp  radial_ring_pattern.h  radial_ring_pattern.hpp  solid_pattern.h  solid_pattern.hpp  stripe_pattern.cpp  stripe_pattern.h  stripe_pattern.hpp
src/shapes/: cone.cpp  cone.hpp  csg.cpp  csg.hpp  cube.cpp  cube.hpp  cylinder.cpp  cylinder.hpp  group.cpp  group.hpp  plane.cpp  plane.h  plane.hpp  shape.cpp  shape.h  shape.hpp  smooth_triangle.cpp  smooth_triangle.hpp  sphere.cpp  sphere.h  sphere.hpp  triangle.cpp  triangle.hpp
tests/: CMakeLists.txt  all_tests.cpp  ch10_pattern_tests.cpp  ch10_patterns_tests.cpp  ch11_reflections_tests.cpp  ch12_cube_tests.cpp  ch13_cylinder_tests.cpp  ch14.1_triangle_tests.cpp  ch14_group_tests.cpp  ch15.1_triangle_tests.cpp  ch15.2_obj_file_tests.cpp  ch16_csg_tests.cpp  ch1_tuple_tests.cpp  ch2_canvas_tests.cpp  ch3_matrix_tests.cpp  ch4_transformation_tests.cpp  ch5_ray_tests.cpp  ch6_shading_tests.cpp  ch7_world_tests.cpp  ch8_shadow_tests.cpp  ch9_shapes_tests.cpp  example_tests.cpp
