# TODO: Make this cmake file actually work instead of including
# everything in the cmake file above

# # Add the patterns library
# add_library(
#     patterns
#     stripe_pattern.cpp
# )

# # message("Raytracer current source dir = ${CMAKE_CURRENT_SOURCE_DIR}")

# # Include the current source directory for header files
# target_include_directories(patterns PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

# # Link the patterns library to the main target
# target_link_libraries(src PUBLIC patterns)
